style.css
/* THIS PROJECT WAS FOLLOWED ALONG TUTORIALS WHILE LEARNING HOW TO BUILD A WEBSITE. */

*
{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

nav
{
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    font-family: 'Nunito Sans', sans-serif;
    background-color: rgb(255, 207, 148);
}

.logo
{
    color: black;
    font-family: 'Nunito Sans', sans-serif;
    letter-spacing: 1px;
}

.navigation-links
{
    display: flex;
    justify-content: space-around;
    width: 400px;
    list-style: none;
}

.navigation-links a
{
    color: black;
    text-decoration: none;
    letter-spacing: 1px;
    font-weight: bold;
}

.layers
{
    display: none;
    cursor: pointer;
}

.layers div
{
    width: 25px;
    height: 3px;
    margin: 5px;
    background-color: black;
    transition: all .3s ease;
}

.greeting
{
    display: flex;
    letter-spacing: 1px;
    font-weight: bold;
    font-size: 24px;
    position: absolute;
    justify-content: space-around;
    top: 10vh;
}

@media screen and (max-width:1024px) 
{
    .navigation-links
    {
        width: 540px;
    }
}

@media screen and (max-width:768px) 
{   body
    {
      overflow-x: hidden;
    }
    .navigation-links
    {
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 8vh;
        background-color: rgb(255, 207, 148);
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform .5s ease-in;
    }
    .navigation-links li
    {
        opacity: 0;
    }

    .layers
    {
        display: block;
    }
}

.nav-active{
    transform: translateX(0%)!important;
}

@keyframes navFade
{
    from
    {
        opacity: 0;
        transform: translateX(50px);
    }
    to
    {
        opacity: 1;
        transform: translateX(0px);
    }
}

.toggle .lineOne
{
    transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .lineTwo
{
    opacity: 0;
}
.toggle .lineThree
{
    transform: rotate(45deg) translate(-5px, -6px);
}

.profilePic
{
    display: flex;
    position: absolute;
    bottom: 50px;
    left: 50px;
    transform: scaleX(-1);
}

.aboutMe
{
    display: flex;
    letter-spacing: 1px;
    font-weight: bold;
    font-size: 24px;
    position: absolute;
    justify-content: space-around;
    top: 10vh;
    width: 90vw;
}

.form
{
    width: 20%;
    position: relative;
    height: 42px;
    top: 15vh;
    overflow: hidden;
}

.nameSection input
{
    width: 100%;
    height: 100%;
    color: black;
    padding-top: 20px;
    border: none;
}

.nameSection label
{
    position: absolute;
    bottom: 0px;
    left: 0%;
    width: 100%;
    height: 100%;
    pointer-events: none;
    border-bottom: 1px solid black;
}

.nameSection label::after
{
    content: "";
    position: absolute;
    left: 0px;
    bottom: -1px;
    height: 100%;
    width: 100%;
    border-bottom: 3px solid lightblue;
    transform: translateX(-100%);
    transition: transform .3s ease;
}

.content-name
{
    position: absolute;
    bottom: 5px;
    left: 0px;
    transition: all .3s ease;
}

.nameSection input:focus + .label-name .content-name,
.nameSection input:valid + .label-name .content-name
{
    transform: translateY(-150%);
    font-size: 14px;
    color: lightblue;
}

.form input:focus + .label-name::after, .form input:valid + .label-name::after
{
    transform: translateX(0%);
}

